# property_collesium

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.clinerules/: Backend Context.md  Frontend Context.md
backend/: index.js  package-lock.json  package.json
backend/models/: Auction.js  Property.js  Transaction.js
backend/routes/: adminRoutes.js  auctionRoutes.js  propertyRoutes.js
backend/utils/: ipfs.js  solana.js
frontend/: README.md  get_program_id.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/solana-program/liquidity-pool/: Cargo.toml
frontend/solana-program/liquidity-pool/src/: lib.rs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddLiquidityTab.tsx  BackButton.tsx  ExplorePoolsTab.tsx  Hero.tsx  Navbar.tsx  (+6 more)
frontend/test-ledger/: faucet-keypair.json  genesis.tar.bz2  vote-account-keypair.json
solana-program/auction/: Cargo.toml
src/: App.tsx  index.css  main.tsx
src/components/: AddLiquidityTab.tsx  ExplorePoolsTab.tsx  Hero.tsx  MyPositionsTab.tsx  Navbar.tsx  PropertyGrid.tsx  RemoveLiquidityTab.tsx  SwapPanel.tsx  SwapTab.tsx  theme-provider.tsx  theme-toggle.tsx
src/lib/: liquidityPool.ts
src/pages/: AuctionPage.tsx  CreateProperty.tsx  Index.tsx  LiquidityPoolPage.tsx  MarketplacePage.tsx  Portfolio.tsx  PropertyDetail.tsx  StartAuctionPage.tsx  Transactions.tsx
test-ledger/: stake-account-keypair.json  validator-keypair.json
test-ledger/rocksdb/: 000014.sst  000016.sst  000017.sst  000018.sst  LOG.old.1760758919786248
(+27 files in other folders)
