[package]
name = "liquidity-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.18.16"
borsh = "0.10.3"
thiserror = "1.0.61"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[features]
custom-heap = []
custom-panic = []
